--- a/inhame.css
+++ b/inhame.css
@@ -9,26 +9,33 @@ body{
 
 main{
      margin:auto;
+     max-width: 1400px;
 }
 
 .container{
-    max-width:1100px;
-    min-width: 300px;
-}
+    align-items: center;
+    border:#E0D8B0 solid 1px;
+    display: flex;
+    
+   }
 
-#principal{
+ #principal{
     background-color: #E5890A;
     overflow: hidden;
-    position: relative;
+    flex-direction: row;
+    width: 100%;
+    margin:auto;
 }
 
-#selecionado{
-    float: left;
+
+
+section{
+    display: inline;
 }
 
-#selecionado img{
-    width: 30%;
-}
+
+
+
 
 #selecionado figcaption p{
     text-align: center;
@@ -36,11 +43,7 @@ main{
 
 
 
-#topFive{
-
-}
-
-#topFive img{
+#principal img{
     width: 30%;
 }
 
