--- a/menu.css
+++ b/menu.css
@@ -1,3 +1,14 @@
+header nav{
+    background-color: #5c5e5e;
+    overflow: hidden;
+    height: 40px;
+    margin-top:10px;
+    max-width: 1400px;
+    margin:auto;
+}
+
+
+
 
 .menu{
     list-style: none;
@@ -21,13 +32,7 @@
     padding-top: 5px;
 }
 
-header nav{
-    background-color: #5c5e5e;
-    overflow: hidden;
-    height: 40px;
-    margin-top:10px;
-    width: 100%;
-}
+
 
 #pesquisa {
     display: flex;
