--- a/menu.css
+++ b/menu.css
@@ -5,9 +5,10 @@ header nav{
     margin-top:10px;
     max-width: 1400px;
     margin:auto;
+    position: relative;
 }
 
-.menu{
+.midias{
     list-style: none;
     margin: 0;
     padding: 0;
@@ -15,21 +16,19 @@ header nav{
 }
 
 
-.menu li{
+.midias li{
     float: left;
     margin-left:10px;
 }
 
-.menu a{
+.midias a{
     display: block;
 }
 
-.imagemMenu{
-    width: 70%;
-    padding-top: 5px;
+.imagemMidia{
+    width: 50%;
+    padding-top: 10px;
 }
-
-
 
 #pesquisa {
     display: flex;
@@ -39,3 +38,34 @@ header nav{
     align-items: center;
     position: relative;
 }
+
+#menu{
+    position: absolute;
+}
+
+#menu ul{
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    margin: 0; 
+}
+
+#menu ul li{
+    margin-left: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 20px;
+    justify-content: center;
+    align-content: center;
+
+}
+
+#menu a {
+    text-decoration: none;
+    display: block;
+    color: white;
+    padding: 7px;
+  }
+  
+  #menu  a:hover {
+    background: #323233;
+  }
