--- a/menu.css
+++ b/menu.css
@@ -1,11 +1,12 @@
 header nav{
     background-color: #5c5e5e;
     overflow: hidden;
-    height: 40px;
+    height: 60px;
     margin-top:10px;
     max-width: 1400px;
     margin:auto;
     position: relative;
+    border-radius:15px;
 }
 
 .midias{
@@ -13,6 +14,7 @@ header nav{
     margin: 0;
     padding: 0;
     float:right;
+    margin-top: 10px;
 }
 
 
@@ -41,6 +43,7 @@ header nav{
 
 #menu{
     position: absolute;
+    margin-top: 10px;
 }
 
 #menu ul{
